// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardFooterInstanceActionButtons renders per snapshot with test-kebabmenuarialabel aria label passed as prop: component snapshot 1`] = `
<DocumentFragment>
  <div>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="fui-Button r1alrhcs fui-MenuButton menuButton ___cpe5h10_1yhfyj7 f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb fjxutwb f1s2uweq fr80ssc f1ukrpxl fecsdlb f139oj5f ft1hn21 fuxngvv fwiml72 f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1fg1p5m f1dfjoow f1j98vj9 f1tme0vf f4xjyn1 f18onu3q f9ddjv3 f18ktai2 fwbmr0d f44c6la"
      data-tabster="{"restorer":{"type":1}}"
      id="menur1"
      role="button"
      tabindex="0"
      type="button"
    >
      <span
        class="fui-Button__icon rywnvv2 fui-MenuButton__icon"
      >
        <svg
          aria-hidden="true"
          class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
          fill="currentColor"
          height="1em"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 6a1.25 1.25 0 1 1 0-2.5A1.25 1.25 0 0 1 10 6Zm0 5.25a1.25 1.25 0 1 1 0-2.5 1.25 1.25 0 0 1 0 2.5Zm-1.25 4a1.25 1.25 0 1 0 2.5 0 1.25 1.25 0 0 0-2.5 0Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
    <span
      hidden=""
    />
    <mock-toast
      deps="[object Object]"
      timeoutlength="6000"
    />
  </div>
</DocumentFragment>
`;

exports[`CardFooterInstanceActionButtons renders per snapshot with undefined aria label passed as prop: component snapshot 1`] = `
<DocumentFragment>
  <div>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="fui-Button r1alrhcs fui-MenuButton menuButton ___cpe5h10_1yhfyj7 f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb fjxutwb f1s2uweq fr80ssc f1ukrpxl fecsdlb f139oj5f ft1hn21 fuxngvv fwiml72 f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1fg1p5m f1dfjoow f1j98vj9 f1tme0vf f4xjyn1 f18onu3q f9ddjv3 f18ktai2 fwbmr0d f44c6la"
      data-tabster="{"restorer":{"type":1}}"
      id="menur3"
      role="button"
      tabindex="0"
      type="button"
    >
      <span
        class="fui-Button__icon rywnvv2 fui-MenuButton__icon"
      >
        <svg
          aria-hidden="true"
          class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
          fill="currentColor"
          height="1em"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 6a1.25 1.25 0 1 1 0-2.5A1.25 1.25 0 0 1 10 6Zm0 5.25a1.25 1.25 0 1 1 0-2.5 1.25 1.25 0 0 1 0 2.5Zm-1.25 4a1.25 1.25 0 1 0 2.5 0 1.25 1.25 0 0 0-2.5 0Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
    <span
      hidden=""
    />
    <mock-toast
      deps="[object Object]"
      timeoutlength="6000"
    />
  </div>
</DocumentFragment>
`;

exports[`CardFooterInstanceActionButtons renders without copyFailureDetails supported: component snapshot 1`] = `
<DocumentFragment>
  <div>
    <mock-button
      appearance="transparent"
      as="button"
      classname="item1"
      size="medium"
    >
      item 1
    </mock-button>
    <mock-button
      appearance="transparent"
      as="button"
      classname="item2"
      size="medium"
    >
      item 2
    </mock-button>
  </div>
</DocumentFragment>
`;

exports[`CardFooterInstanceActionButtons with isCardFooterCollapsed=false renders per snapshot: component snapshot 1`] = `
<DocumentFragment>
  <div>
    <mock-button
      appearance="transparent"
      as="button"
      classname="item1"
      size="medium"
    >
      item 1
    </mock-button>
    <mock-button
      appearance="transparent"
      as="button"
      classname="item2"
      size="medium"
    >
      item 2
    </mock-button>
    <mock-toast
      deps="[object Object]"
      timeoutlength="6000"
    />
  </div>
</DocumentFragment>
`;

exports[`CardFooterInstanceActionButtons with isCardFooterCollapsed=true renders per snapshot: component snapshot 1`] = `
<DocumentFragment>
  <div>
    <mock-tooltip
      content="More actions"
      relationship="description"
    >
      <mock-menu>
        <mock-menutrigger />
        <mock-menupopover
          style="border-radius: unset !important;"
        >
          <mock-menulist>
            <mock-menuitem
              classname="kebabMenuIcon"
              text="item 1"
            >
              item 1
            </mock-menuitem>
            <mock-menuitem
              classname="kebabMenuIcon"
              text="item 2"
            >
              item 2
            </mock-menuitem>
          </mock-menulist>
        </mock-menupopover>
      </mock-menu>
    </mock-tooltip>
    <mock-toast
      deps="[object Object]"
      timeoutlength="6000"
    />
  </div>
</DocumentFragment>
`;

exports[`CardFooterInstanceActionButtons with isCardFooterCollapsed=true renders per snapshot: kebab button menu 1`] = `
<DocumentFragment>
  <div>
    <mock-tooltip
      content="More actions"
      relationship="description"
    >
      <mock-menu>
        <mock-menutrigger />
        <mock-menupopover
          style="border-radius: unset !important;"
        >
          <mock-menulist>
            <mock-menuitem
              classname="kebabMenuIcon"
              text="item 1"
            >
              item 1
            </mock-menuitem>
            <mock-menuitem
              classname="kebabMenuIcon"
              text="item 2"
            >
              item 2
            </mock-menuitem>
          </mock-menulist>
        </mock-menupopover>
      </mock-menu>
    </mock-tooltip>
    <mock-toast
      deps="[object Object]"
      timeoutlength="6000"
    />
  </div>
</DocumentFragment>
`;
